Bug 692621 - Text is mispositioned after conversion using pdfwrite
Summary: Text is mispositioned after conversion using pdfwrite
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows Vista
: P2 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-21 09:59 UTC by Ken Sharp
Modified: 2011-11-25 04:03 UTC (History)
0 users

See Also:
Customer: 870
Word Size: ---


Attachments
sample PDF file (24.12 KB, application/download)
2011-10-21 09:59 UTC, Ken Sharp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2011-10-21 09:59:49 UTC
Created attachment 8032 [details]
sample PDF file

The Arabic text in the sample file is not correctly positioned after conversion, it looks like many glyphs have a Width of 0.
Comment 1 Ken Sharp 2011-10-24 15:55:42 UTC
Fixed in git commit b5fa52b7e60a7eb23b77c4fd117ed37eb04263b5