Bug #692621 Ensure that when copying width information, we create an array as large as the new MaxCID value

Commit 312255297353a9f62b5090e9137586a8ecfc8601 create the new MaxCID entry
for CIDFont type 0 fonts which use a GlyphDirectory. We must use the same
value when creating the arrays to store the widths of the glyphs, or we will
no have a large enough array, leading to soem glyphs getting the Default Width.

No differences expected